# IOT-Entrance-Control-System

./: .gitignore  Answers.md  LICENSE  README.md
src/: monitoringsystemauthenticator.cpp  monitoringsystemauthenticator.h  monitoringsystemuser.cpp  monitoringsystemuser.h
src/Client/: CMakeLists.txt  cpsapplication.cpp  cpsapplication.h  cpsbutton.cpp  cpsbutton.h  cpshistorywindow.cpp  cpshistorywindow.h  cpslabel.cpp  cpslabel.h  cpsmainwindow.cpp  cpsmainwindow.h  cpstextfield.cpp  cpstextfield.h  cpswebsocketclient.cpp  cpswebsocketclient.h  cpswebsocketrequest.cpp  cpswebsocketrequest.h  cpswindowsapitools.h  icon.rc  main.cpp
src/Embedded/etherent/: etherent.ino
src/Embedded/rfid/: rfid.ino
src/EntranceControlCloud/: .gitignore  CMakeLists.txt  authenticator.cpp  authenticator.h  entrancehistory.cpp  entrancehistory.h  entrancerecord.cpp  entrancerecord.h  entranceservercloud.cpp  entranceservercloud.h  httpserver.cpp  httpserver.h  main.cpp  monitoringsystemauthenticator.cpp  orm.cpp  orm.h  rfiditem.cpp  rfiditem.h  websocketrequest.cpp  websocketrequest.h  websocketresponse.cpp  websocketresponse.h  websocketserver.cpp  websocketserver.h
src/EntranceControlCloud/data/: entrance_history.json  rfid_tags.json  users.json
src/Proteus/: CPS_IOT.pdsprj
src/Proteus/Project Backups/: CPS_IOT [Autosaved].pdsprj
